language/gen/KoordParser.java
// Generated from /home/guest/Documents/KoordLanguage/src/main/antlr4/Koord.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class KoordParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AGENT=1, MODULE=2, USING=3, DEF=4, TYPE=5, FUN=6, ADT=7, FOR=8, ACTUATORS=9, 
		SENSORS=10, ALLWRITE=11, ALLREAD=12, LOCAL=13, LIST=14, MAP=15, QUEUE=16, 
		INIT=17, INT=18, FLOAT=19, BOOL=20, STRINGTYPE=21, STREAM=22, POS=23, 
		INPUTMAP=24, IF=25, ELSE=26, ATOMIC=27, PRE=28, EFF=29, TRUE=30, FALSE=31, 
		NONE=32, PID=33, NUMAGENTS=34, STOP=35, COLON=36, COMMA=37, SEMICOLON=38, 
		LPAR=39, RPAR=40, LBRACE=41, RBRACE=42, LCURLY=43, RCURLY=44, LANGLE=45, 
		RANGLE=46, AND=47, OR=48, NOT=49, UPPER=50, VARNAME=51, INUM=52, FNUM=53, 
		PLUS=54, MINUS=55, TIMES=56, BY=57, EQ=58, GEQ=59, LEQ=60, NEQ=61, ASGN=62, 
		LSHIFT=63, STRING=64, NEWLINE=65, SKIP_=66, INDENT=67, DEDENT=68;
	public static final int
		RULE_program = 0, RULE_defs = 1, RULE_funcdef = 2, RULE_adtdef = 3, RULE_param = 4, 
		RULE_event = 5, RULE_statementblock = 6, RULE_stmt = 7, RULE_forloop = 8, 
		RULE_conditional = 9, RULE_elseblock = 10, RULE_iostream = 11, RULE_funccall = 12, 
		RULE_arglist = 13, RULE_assign = 14, RULE_expr = 15, RULE_bexpr = 16, 
		RULE_aexpr = 17, RULE_constant = 18, RULE_relop = 19, RULE_allwritevars = 20, 
		RULE_allreadvars = 21, RULE_localvars = 22, RULE_decl = 23, RULE_arraydec = 24, 
		RULE_module = 25, RULE_actuatordecls = 26, RULE_sensordecls = 27, RULE_init = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "defs", "funcdef", "adtdef", "param", "event", "statementblock", 
			"stmt", "forloop", "conditional", "elseblock", "iostream", "funccall", 
			"arglist", "assign", "expr", "bexpr", "aexpr", "constant", "relop", "allwritevars", 
			"allreadvars", "localvars", "decl", "arraydec", "module", "actuatordecls", 
			"sensordecls", "init"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'@agent'", "'module'", "'using'", "'def'", "'type'", "'fun'", 
			"'adt'", "'for'", "'actuators'", "'sensors'", "'allwrite'", "'allread'", 
			"'local'", "'list'", "'map'", "'queue'", "'init'", "'int'", "'float'", 
			"'boolean'", "'string'", "'stream'", "'pos'", "'inputMap'", "'if'", "'else'", 
			"'atomic'", "'pre'", "'eff'", "'true'", "'false'", "'None'", "'pid'", 
			"'numAgents'", "'stop'", "':'", "','", "';'", "'('", "')'", "'['", "']'", 
			"'{'", "'}'", "'<'", "'>'", null, null, "'!'", null, null, null, null, 
			"'+'", "'-'", "'*'", "'/'", "'=='", "'>='", "'<='", "'!='", "'='", "'<<'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AGENT", "MODULE", "USING", "DEF", "TYPE", "FUN", "ADT", "FOR", 
			"ACTUATORS", "SENSORS", "ALLWRITE", "ALLREAD", "LOCAL", "LIST", "MAP", 
			"QUEUE", "INIT", "INT", "FLOAT", "BOOL", "STRINGTYPE", "STREAM", "POS", 
			"INPUTMAP", "IF", "ELSE", "ATOMIC", "PRE", "EFF", "TRUE", "FALSE", "NONE", 
			"PID", "NUMAGENTS", "STOP", "COLON", "COMMA", "SEMICOLON", "LPAR", "RPAR", 
			"LBRACE", "RBRACE", "LCURLY", "RCURLY", "LANGLE", "RANGLE", "AND", "OR", 
			"NOT", "UPPER", "VARNAME", "INUM", "FNUM", "PLUS", "MINUS", "TIMES", 
			"BY", "EQ", "GEQ", "LEQ", "NEQ", "ASGN", "LSHIFT", "STRING", "NEWLINE", 
			"SKIP_", "INDENT", "DEDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Koord.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KoordParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public DefsContext defs() {
			return getRuleContext(DefsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(KoordParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(KoordParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(KoordParser.NEWLINE, i);
		}
		public List<ModuleContext> module() {
			return getRuleContexts(ModuleContext.class);
		}
		public ModuleContext module(int i) {
			return getRuleContext(ModuleContext.class,i);
		}
		public List<AllreadvarsContext> allreadvars() {
			return getRuleContexts(AllreadvarsContext.class);
		}
		public AllreadvarsContext allreadvars(int i) {
			return getRuleContext(AllreadvarsContext.class,i);
		}
		public List<AllwritevarsContext> allwritevars() {
			return getRuleContexts(AllwritevarsContext.class);
		}
		public AllwritevarsContext allwritevars(int i) {
			return getRuleContext(AllwritevarsContext.class,i);
		}
		public List<LocalvarsContext> localvars() {
			return getRuleContexts(LocalvarsContext.class);
		}
		public LocalvarsContext localvars(int i) {
			return getRuleContext(LocalvarsContext.class,i);
		}
		public InitContext init() {
			return getRuleContext(InitContext.class,0);
		}
		public List<EventContext> event() {
			return getRuleContexts(EventContext.class);
		}
		public EventContext event(int i) {
			return getRuleContext(EventContext.class,i);
		}
		public List<TerminalNode> AGENT() { return getTokens(KoordParser.AGENT); }
		public TerminalNode AGENT(int i) {
			return getToken(KoordParser.AGENT, i);
		}
		public List<TerminalNode> LPAR() { return getTokens(KoordParser.LPAR); }
		public TerminalNode LPAR(int i) {
			return getToken(KoordParser.LPAR, i);
		}
		public List<TerminalNode> UPPER() { return getTokens(KoordParser.UPPER); }
		public TerminalNode UPPER(int i) {
			return getToken(KoordParser.UPPER, i);
		}
		public List<TerminalNode> RPAR() { return getTokens(KoordParser.RPAR); }
		public TerminalNode RPAR(int i) {
			return getToken(KoordParser.RPAR, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KoordListener ) ((KoordListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KoordListener ) ((KoordListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KoordVisitor ) return ((KoordVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			setState(160);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,22,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(58);
					match(NEWLINE);
					}
				}

				setState(61);
				defs();
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==USING) {
					{
					{
					setState(62);
					module();
					}
					}
					setState(67);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 14336L) != 0)) {
					{
					setState(71);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case ALLREAD:
						{
						setState(68);
						allreadvars();
						}
						break;
					case ALLWRITE:
						{
						setState(69);
						allwritevars();
						}
						break;
					case LOCAL:
						{
						setState(70);
						localvars();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(75);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INIT) {
					{
					setState(76);
					init();
					}
				}

				setState(80); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(79);
					event();
					}
					}
					setState(82); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==VARNAME );
				setState(84);
				match(EOF);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(86);
					match(NEWLINE);
					}
				}

				setState(89);
				defs();
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ALLWRITE || _la==ALLREAD) {
					{
					setState(92);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case ALLREAD:
						{
						setState(90);
						allreadvars();
						}
						break;
					case ALLWRITE:
						{
						setState(91);
						allwritevars();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(96);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INIT) {
					{
					setState(97);
					init();
					}
				}

				setState(124); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(100);
					match(AGENT);
					setState(101);
					match(LPAR);
					setState(102);
					match(UPPER);
					setState(103);
					match(RPAR);
					setState(107);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NEWLINE) {
						{
						{
						setState(104);
						match(NEWLINE);
						}
						}
						setState(109);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(113);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==USING) {
						{
						{
						setState(110);
						module();
						}
						}
						setState(115);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(117);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==LOCAL) {
						{
						setState(116);
						localvars();
						}
					}

					setState(120); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(119);
						event();
						}
						}
						setState(122); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==VARNAME );
					}
					}
					setState(126); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==AGENT );
				setState(128);
				match(EOF);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(130);
					match(NEWLINE);
					}
				}

				setState(133);
				defs();
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ALLWRITE || _la==ALLREAD) {
					{
					setState(136);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case ALLREAD:
						{
						setState(134);
						allreadvars();
						}
						break;
					case ALLWRITE:
						{
						setState(135);
						allwritevars();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(140);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==USING) {
					{
					{
					setState(141);
					module();
					}
					}
					setState(146);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LOCAL) {
					{
					setState(147);
					localvars();
					}
				}

				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INIT) {
					{
					setState(150);
					init();
					}
				}

				setState(154); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(153);
					event();
					}
					}
					setState(156); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==VARNAME );
				setState(158);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefsContext extends ParserRuleContext {
		public List<FuncdefContext> funcdef() {
			return getRuleContexts(FuncdefContext.class);
		}
		public FuncdefContext funcdef(int i) {
			return getRuleContext(FuncdefContext.class,i);
		}
		public List<AdtdefContext> adtdef() {
			return getRuleContexts(AdtdefContext.class);
		}
		public AdtdefContext adtdef(int i) {
			return getRuleContext(AdtdefContext.class,i);
		}
		public DefsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KoordListener ) ((KoordListener)listener).enterDefs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KoordListener ) ((KoordListener)listener).exitDefs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KoordVisitor ) return ((KoordVisitor<? extends T>)visitor).visitDefs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefsContext defs() throws RecognitionException {
		DefsContext _localctx = new DefsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_defs);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,23,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(162);
					funcdef();
					}
					} 
				}
				setState(167);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,23,_ctx);
			}
			setState(171);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DEF) {
				{
				{
				setState(168);
				adtdef();
				}
				}
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncdefContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(KoordParser.DEF, 0); }
		public TerminalNode FUN() { return getToken(KoordParser.FUN, 0); }
		public TerminalNode VARNAME() { return getToken(KoordParser.VARNAME, 0); }
		public TerminalNode LPAR() { return getToken(KoordParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(KoordParser.RPAR, 0); }
		public TerminalNode COLON() { return getToken(KoordParser.COLON, 0); }
		public TerminalNode NEWLINE() { return getToken(KoordParser.NEWLINE, 0); }
		public StatementblockContext statementblock() {
			return getRuleContext(StatementblockContext.class,0);
		}
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public FuncdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcdef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KoordListener ) ((KoordListener)listener).enterFuncdef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KoordListener ) ((KoordListener)listener).exitFuncdef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KoordVisitor ) return ((KoordVisitor<? extends T>)visitor).visitFuncdef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncdefContext funcdef() throws RecognitionException {
		FuncdefContext _localctx = new FuncdefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funcdef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			match(DEF);
			setState(175);
			match(FUN);
			setState(176);
			match(VARNAME);
			setState(177);
			match(LPAR);
			setState(181);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE) {
				{
				{
				setState(178);
				param();
				}
				}
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(184);
			match(RPAR);
			setState(185);
			match(COLON);
			setState(186);
			match(NEWLINE);
			setState(187);
			statementblock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AdtdefContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(KoordParser.DEF, 0); }
		public TerminalNode UPPER() { return getToken(KoordParser.UPPER, 0); }
		public TerminalNode COLON() { return getToken(KoordParser.COLON, 0); }
		public TerminalNode NEWLINE() { return getToken(KoordParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(KoordParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(KoordParser.DEDENT, 0); }
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public AdtdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_adtdef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KoordListener ) ((KoordListener)listener).enterAdtdef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KoordListener ) ((KoordListener)listener).exitAdtdef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KoordVisitor ) return ((KoordVisitor<? extends T>)visitor).visitAdtdef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AdtdefContext adtdef() throws RecognitionException {
		AdtdefContext _localctx = new AdtdefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_adtdef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189);
			match(DEF);
			setState(190);
			match(UPPER);
			setState(191);
			match(COLON);
			setState(192);
			match(NEWLINE);
			setState(193);
			match(INDENT);
			setState(195); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(194);
				decl();
				}
				}
				setState(197); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1125899923423232L) != 0) );
			setState(199);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(KoordParser.TYPE, 0); }
		public TerminalNode VARNAME() { return getToken(KoordParser.VARNAME, 0); }
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KoordListener ) ((KoordListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KoordListener ) ((KoordListener)listener).exitParam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KoordVisitor ) return ((KoordVisitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(201);
			match(TYPE);
			setState(202);
			match(VARNAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EventContext extends ParserRuleContext {
		public TerminalNode VARNAME() { return getToken(KoordParser.VARNAME, 0); }
		public List<TerminalNode> COLON() { return getTokens(KoordParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(KoordParser.COLON, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(KoordParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(KoordParser.NEWLINE, i);
		}
		public TerminalNode INDENT() { return getToken(KoordParser.INDENT, 0); }
		public TerminalNode PRE() { return getToken(KoordParser.PRE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode EFF() { return getToken(KoordParser.EFF, 0); }
		public StatementblockContext statementblock() {
			return getRuleContext(StatementblockContext.class,0);
		}
		public TerminalNode DEDENT() { return getToken(KoordParser.DEDENT, 0); }
		public EventContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_event; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KoordListener ) ((KoordListener)listener).enterEvent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KoordListener ) ((KoordListener)listener).exitEvent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KoordVisitor ) return ((KoordVisitor<? extends T>)visitor).visitEvent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventContext event() throws RecognitionException {
		EventContext _localctx = new EventContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_event);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(204);
			match(VARNAME);
			setState(205);
			match(COLON);
			setState(206);
			match(NEWLINE);
			setState(207);
			match(INDENT);
			setState(208);
			match(PRE);
			setState(209);
			match(COLON);
			setState(210);
			expr();
			setState(211);
			match(NEWLINE);
			setState(212);
			match(EFF);
			setState(213);
			match(COLON);
			setState(214);
			match(NEWLINE);
			setState(215);
			statementblock();
			setState(216);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
